--- a/styles.css
+++ b/styles.css
@@ -113,3 +113,9 @@ ul {
   font-family: monospace;
   font-size: 1.1rem;
 }
+
+.hightlight1{
+  font-size: 1.5rem;  
+  background-color:yellow;"
+  font-weight: bold;
+}
